# demo-devcontainer-rust

./: README.md
hello_cargo/: Cargo.toml
hello_cargo/src/: main.rs
